# GBmu

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Cargo.toml  Makefile  README.md  TODO  annotated.html  annotated_dup.js  asprintf_8h_source.html  backup  classes.html  clodo__loop_8c.html  clodo__loop_8c.js  compile__program_8h_source.html  cpu_8h.html  cpu_8h.js  cpu_8h_source.html  debug_8h.html  debug_8h.js  debug_8h_source.html  debuggerGrammar  debuggerGrammarToOutput  dir_000000_000002.html  dir_000001_000002.html  dir_000003_000002.html  dir_000004_000002.html  dir_000005_000002.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_616647c127be7a8ccf80c47c0b9548bb.html  dir_616647c127be7a8ccf80c47c0b9548bb.js  dir_616647c127be7a8ccf80c47c0b9548bb_dep.map  dir_616647c127be7a8ccf80c47c0b9548bb_dep.md5  dir_6171f02b744a82290a33ade69a516b18.html  dir_6171f02b744a82290a33ade69a516b18.js  dir_6171f02b744a82290a33ade69a516b18_dep.map  dir_6171f02b744a82290a33ade69a516b18_dep.md5  (+157 more)
cmake/: CopyDLLs.cmake  ccache.cmake
crates/gbmu/: Cargo.toml
crates/gbmu/src/: debugger.rs  emulator.rs  main.rs  system.rs
crates/ui/: Cargo.toml
crates/ui/src/: debugger.rs  lib.rs  style.rs  widgets.rs
crates/ui/src/debugger/: cpu.rs  disassembler.rs  memory.rs  menu.rs  ppu.rs
crates/ui/src/debugger/cpu/: flags.rs  registers.rs
crates/ui/src/debugger/disassembler/: conversion.rs  disass.rs  header.rs  instruction.rs
crates/ui/src/debugger/memory/: view.rs
crates/ui/src/debugger/menu/: button.rs
crates/ui/src/debugger/ppu/: register.rs
crates/ui/src/style/: fonts.rs  theme.rs
crates/ui/src/style/theme/: dark.rs  light.rs
crates/ui/src/widgets/: flag.rs  hexdump.rs  text.rs
crates/ui/src/widgets/hexdump/: renderer.rs  state.rs
doc/: Doxyfile  about_interrupts.txt  dmg_cgb.txt  links  notes
includes/: CustomStack.hpp  DebuggerGrammar.hpp  SymbolNonTerminalAndOr.hpp  SymbolNonTerminalCommand.hpp  SymbolNonTerminalCommandName.hpp  SymbolNonTerminalCommandSuffix.hpp  SymbolNonTerminalComparison.hpp  SymbolNonTerminalExpr.hpp  SymbolNonTerminalFactor.hpp  SymbolNonTerminalFormat.hpp  SymbolNonTerminalInnerValue.hpp  SymbolNonTerminalPrintCommand.hpp  SymbolNonTerminalSeparatorPipeline.hpp  SymbolNonTerminalSeparatorPipelineOrEPS.hpp  SymbolNonTerminalSimpleCommand.hpp  SymbolNonTerminalTerm.hpp  SymbolNonTerminalUnit.hpp  SymbolNonTerminalValue.hpp  SymbolNonTerminalXCommand.hpp  SymbolNonTerminalXSuffix.hpp  SymbolTerminalAnd.hpp  SymbolTerminalBinary.hpp  SymbolTerminalBinaryAnd.hpp  SymbolTerminalBinaryOr.hpp  SymbolTerminalClosedParenthesis.hpp  SymbolTerminalDecimal.hpp  SymbolTerminalDivide.hpp  SymbolTerminalEqual.hpp  SymbolTerminalGreater.hpp  SymbolTerminalGreaterOrEqual.hpp  SymbolTerminalHalfWordFormat.hpp  SymbolTerminalHexadecimal.hpp  SymbolTerminalInteger.hpp  SymbolTerminalLeftShift.hpp  SymbolTerminalLesser.hpp  SymbolTerminalLesserOrEqual.hpp  SymbolTerminalMinus.hpp  SymbolTerminalModulo.hpp  SymbolTerminalMultiply.hpp  SymbolTerminalNotEqual.hpp  (+30 more)
rom/: .gdb_history  Legend of Zelda, The - Link's Awakening DX.sav  Legend of Zelda, The - Oracle of Ages.sav  Super Mario Land 2.sav  test.gb
saves/: DMG_SOUND.sav  F1RACE.sav  HPCOSECRETS.sav  KIRBY2.sav  MARIOLAND2.sav  OAM_BUG.sav  PM_CRYSTAL.sav  POKEMON BLU.sav  POKEMON RED.sav  POKEMON YEL.sav  POKEMON_GLD.sav  POKEMON_SLV.sav  ZELDA NAYRU.sav  ZELDA.sav
savestates/: BATMAN_1.ss  BATMAN_2.ss  DUCK TALES_1.ss  HPCOSECRETS_1.ss  HPCOSECRETS_2.ss  HPCOSECRETS_3.ss  HPCOSECRETS_4.ss  HPCOSECRETS_5.ss  HPCOSECRETS_6.ss  HPCOSECRETS_7.ss  HPCOSECRETS_8.ss  HPCOSECRETS_9.ss  MARIOLAND2_1.ss  PM_CRYSTAL_1.ss  PM_CRYSTAL_6.ss  POKEMON RED_1.ss  TETRIS_1.ss  ZELDA_1.ss  ZELDA_2.ss  ZELDA_3.ss  ZELDA_4.ss  ZELDA_5.ss  ZELDA_6.ss  ZELDA_7.ss  ZELDA_8.ss  ZELDA_9.ss
script/: file_to_array.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  defines_d.js  defines_e.js  enums_0.js  enumvalues_0.js  (+36 more)
srcs/: CustomStack.cpp  DebuggerGrammar.cpp  SymbolNonTerminalAndOr.cpp  SymbolNonTerminalCommand.cpp  SymbolNonTerminalCommandName.cpp  SymbolNonTerminalCommandSuffix.cpp  SymbolNonTerminalComparison.cpp  SymbolNonTerminalExpr.cpp  SymbolNonTerminalFactor.cpp  SymbolNonTerminalFormat.cpp  SymbolNonTerminalInnerValue.cpp  SymbolNonTerminalPrintCommand.cpp  SymbolNonTerminalSeparatorPipeline.cpp  SymbolNonTerminalSeparatorPipelineOrEPS.cpp  SymbolNonTerminalSimpleCommand.cpp  SymbolNonTerminalTerm.cpp  SymbolNonTerminalUnit.cpp  SymbolNonTerminalValue.cpp  SymbolNonTerminalXCommand.cpp  SymbolNonTerminalXSuffix.cpp  SymbolTerminalAnd.cpp  SymbolTerminalBinary.cpp  SymbolTerminalBinaryAnd.cpp  SymbolTerminalBinaryOr.cpp  SymbolTerminalClosedParenthesis.cpp  SymbolTerminalDecimal.cpp  SymbolTerminalDivide.cpp  SymbolTerminalEqual.cpp  SymbolTerminalGreater.cpp  SymbolTerminalGreaterOrEqual.cpp  SymbolTerminalHalfWordFormat.cpp  SymbolTerminalHexadecimal.cpp  SymbolTerminalInteger.cpp  SymbolTerminalLeftShift.cpp  SymbolTerminalLesser.cpp  SymbolTerminalLesserOrEqual.cpp  SymbolTerminalMinus.cpp  SymbolTerminalModulo.cpp  SymbolTerminalMultiply.cpp  SymbolTerminalNotEqual.cpp  (+54 more)
srcs/gbclodo/: CMakeLists.txt  clodo_loop.c  gbclodo.h  handle_joypad.c  init_sdl.c  input_functions.c  main.cpp  main_window_loop.c  renderer.h  savestate_bindings.c  vram_viewer.c
srcs/gbclodo/renderer/: renderer_opengl.cpp  renderer_opengl.h  rescale.cpp
srcs/gbclodo/renderer/gl_utils/: compile_program.cpp  compile_program.h
srcs/gbclodo/renderer/shaders/: basic.frag
srcs/gbclodo/renderer/wrapper_c/: wrapper.cpp  wrapper.h
tests/: CMakeLists.txt  test_fifo.cpp  test_op_add.cpp
(+648 files in other folders)
